Changes from jTDS 1.1
=====================

09/21/2003 - David Kilzer
 o Applied patch for bug [1253127] Improved decimal peformance for MSSQL
   SP4 by Mike Hutchinson.  This patch also fixes bug [1236078] Procedure
   doesn't get called for some BigDecimal values (in Java 1.5).

09/20/2005 - David Kilzer
 o Removed RequestStream.setMaxPrecision() and added a 'maxPrecision'
   argument to the RequestStream constructor.  This value should never
   change during the life of the RequestStream, and thus should be set
   in the constructor.  Updated SharedSocket.getRequestStream() method.
 o Refactored SharedSocket constructor to take only a single argument
   of type ConnectionJDBC2.  Added some package-private getter methods
   to ConnectionJDBC2.
 o Replaced SharedNamedPipe.instance() method with a public constructor.
 o Simplified SharedNamedPipe and SharedLocalNamedPipe constructors by
   passing in a ConnectionJDBC2 object instead of a laundry list of
   data values.  Added more package-private getter methods to the
   ConnectionJDBC2 class.  Moved SharedNamedPipe.calculateBufferSize()
   to Support.calculateNamedPipeBufferSize().  Changed hard-coded buffer
   values in SharedLocalNamedPipe constructor to use the value returned
   from Support.calculateNamedPipeBufferSize().

09/09/2005 - David Kilzer
 o Applied Mike's patch to fix a small bug with getProcedureColumns() in
   JtdsDatabaseMetaData and SQL Server 7.0 where the RETURN_VALUE
   parameter was not prefixed with an '@' character.

09/07/2005 - David Kilzer
 o Extracted code from the original Support.linkException() method to accept
   generic Exception objects.  Provided linkException() convenience methods
   for SQLException and SQLWarning classes.  Linked IOException thrown from
   ConnectionJDBC2.createNamedPipe() for connection timeouts using the new
   method.
 o Applied Mike's fix for bug [1273988] Insert UTF8 string fails when length
   is 255 (ASE12.5.2).

09/06/2005 - David Kilzer